--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer-Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <section class="top-banner"> 
+        <div>
+            <h1>Welcome to</h1>
+        <h1 ><span class="orange-color">Armaan Kaiser</span> world</h1>
+        <h3>My introduction</h3>
+        <p>My name is Armaan.I am a student of IIUC.I am completing bsc in ENgeneering.MY department name is CSE.Now I am completing a course name programming Hero.I want to be a web developer IN sha ALLAH.This is my First website Alhamdullilah.
+         Now i am cpmpleting module 4.I hav an asingnment Today.MY TArget is finishes the asingnment on time and want to select for SCIC In sha ALLAH. 
+        </p>
+        <a class="link-button" target="_blank" href ="https://www.linkedin.com/in/armaan-kaiser-ab6994229/">Hire me</a>
+
+       </div>
+        
+    <div>
+        <img src="images/armaan-pic.png" alt="">
     
+    </div>    
+    </section>
 </body>
 </html>
