--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <section class="top-banner"> 
-        <div>
+        <div class="half-width">
             <h1>Welcome to</h1>
         <h1 ><span class="orange-color">Armaan Kaiser</span> world</h1>
         <h3>My introduction</h3>
@@ -24,10 +24,23 @@
 
        </div>
         
-    <div>
+    <div class="half-width">
         <img src="images/armaan-pic.png" alt="">
     
     </div>    
+    </section>
+    <section class="Dream-big">
+        <div class="half-width">
+            <img src="images/armaans.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream-big</h1>
+            <h2>Become a developer</h2>
+            <p>you have to practice atlest 5/6 hours.you have to work hard.you can gain knowlwdgw from google</p>
+            <a class="link-button" target="_blank" href="">Download Resume</a>
+
+        </div>
+
     </section>
 </body>
 </html>
