--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <section class="top-banner"> 
+    <section class="top-banner flexible-container"> 
         <div class="half-width">
             <h1>Welcome to</h1>
         <h1 ><span class="orange-color">Armaan Kaiser</span> world</h1>
@@ -29,7 +29,7 @@
     
     </div>    
     </section>
-    <section class="Dream-big">
+    <section class="Dream-big flexible-container">
         <div class="half-width">
             <img src="images/armaans.png" alt="">
         </div>
@@ -42,5 +42,23 @@
         </div>
 
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="experience-item">
+                <h2 class="orange-color">Full stack eb developer</h2>
+                <H3>2022-present.pto level web developer</H3>
+                <p> I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="wev-dev-experience" class="experience-item">
+                <h2 class="orange-color">Baby stack web developer</h2>
+                <h3>2022-present pro level web developer</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>This is armaan new web world</p>
+    </footer>
 </body>
 </html>
